# CHC_Thesis

./: .gitignore  BBox.h  BVH.h  BVH_BottomUpConstructor.h  BVH_TopDownConstructor.h  BVH_kevin.h  BottomUpConstructor.h  CHC_Thesis.cxx  CMakeLists.txt  Camera.cxx  Camera.h  README.md  Ray.h  RayTracing.cxx  Stopwatch.h  Triangle.h  VBF Bottomup Notes.cpp  VBF topdown Notes.cpp  debugging.txt  globals.h  list_tests.txt  log_data_HEAD.txt  log_data_output.txt  log_data_output1.txt  log_data_output2.txt  log_data_output3.txt  objLoader.h  ray.cxx  ray.h  run_tests.sh  shading.cxx  shading.h  some_multi_branching_methods.h  utils.h
execute/: list_tests.txt  list_tests2.txt  list_tests3.txt  run_tests2.sh  run_tests3.sh
kdtree-0.5.6/: kdtree.c  kdtree.h
models/: cup.blend  graphics.cs.williams.edu:data:meshes.xml.webloc
models/cup/: cup.blend
models/scene_huge/: scene.blend1  scene.mtl  scene_huge.mtl
models/scene_large/: scene_large.blend  scene_large.blend1  scene_large.mtl
models/scene_med/: scene_med.blend  scene_med.blend1  scene_med.mtl
models/scene_small/: scene_small.blend  scene_small.blend1  scene_small.mtl
models/scene_tiny/: scene_tiny.blend  scene_tiny.mtl
models/sites for models/: http-::www.turbosquid.com:Search:3D-Models:free:obj.webloc
